--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,12 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
+        ],
+        "test": [
+            "vendor/bin/pest --compact"
+        ],
+        "test:u": [
+            "vendor/bin/pest --compact --update-snapshots"
         ]
     },
     "extra": {
