--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-    "private": true,
     "type": "module",
+    "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc && vite build"
+        "build": "vue-tsc && vite build",
+        "l": "eslint .",
+        "lf": "eslint . --fix"
     },
     "devDependencies": {
+        "@antfu/eslint-config": "^2.16.1",
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
+        "eslint": "^9.1.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
